packages/static_bits/tests/compile_fail/extract_bits_ct_invalid_range.zig
const bits = @import("static_bits");

comptime {
    _ = bits.bitfield.extractBitsCt(u8, 0xFF, 7, 2);
}
